# Robotics-main

./: .gitignore  LICENSE  README.md  setup.py  strip_jupyter.sh
docker/: .p10k.zsh  Dockerfile  build.sh  run.sh  virtual_screen.md
robotics/mindworld/: draw_utils.py  grounded_sam.py  interface_mixin.py  mind.py  plugin.py  rearrangement_env.py  worldstate.py
robotics/mindworld/legacy/: record_pts.py  semantic_map.py
robotics/mindworld/tester/: test_mind.py
robotics/misc/: __init__.py  export_base_link.py  test_sapien_basic.py
robotics/planner/: __init__.py  agent.py  skill.py
robotics/planner/grasp/: .gitignore  __init__.py  gen_grasp_pose.py  grasp_api.py
robotics/planner/ik/: __init__.py  ik_solver.py
robotics/planner/motion_planner/: planner_v2.py  test.sh  tester.py
robotics/planner/skills/: __init__.py  attach_object.py  compose.py  ee_move.py  grasp.py  keyboard_ctrl.py  sequential.py  show_camera.py
robotics/planner/tester/: test_ee_move.py  test_keyboard.py  test_scene_move.py
robotics/real/: camera_node.py  ee_controller.py  ik.py  mycobot_node.py  play.py  record.py  teleop_vive.py  test_fk.py
robotics/shaders/: lidar.py
robotics/shaders/lidar/: camera.rgen
robotics/sim/tester/: test_mobile_sapien.py
ros2_ws/src/ros2_nav/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_ws/src/ros2_nav/config/: nav2.yaml
ros2_ws/src/ros2_nav/launch/: localization.launch.py  nav2.launch.py  slam.launch.py  view_robot.launch.py
ros2_ws/src/ros2_nav/rviz/: model.rviz  robot.rviz
